<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    android:weightSum="1">


    <SeekBar
        android:id="@+id/volume_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="36"
         />

    <LinearLayout
        android:id="@+id/audio_volume_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/volume_seekbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_volume" />

        <TextView
            android:id="@+id/volume_seekbar_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_effect_selector_big"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/audio_effect_selector_l1"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/audio_effect_selector"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/audio_effect_bitcrusher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_bitcrusher"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Switch
                android:id="@+id/audio_effect_fuzz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_fuzz"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Switch
                android:id="@+id/audio_effect_flange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_flange"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/audio_effect_echo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_echo" />

            <Switch
                android:id="@+id/audio_effect_reverb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_reverb"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Switch
                android:id="@+id/audio_effect_chorus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_chorus"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/audio_effect_noisemask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_noisemask"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Switch
                android:id="@+id/audio_effect_bassboost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/audio_effect_bassboost"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_effect_echo" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_delay" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_level" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/audio_equalizer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/audio_equalizer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/equalizer_band_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_band_0_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equalizer_band_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/equalizer_band_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_band_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equalizer_band_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/equalizer_band_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_band_2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equalizer_band_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/equalizer_band_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_band_3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equalizer_band_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/equalizer_band_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_band_4_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equalizer_band_4" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/audio_presets_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/audio_presets" />

    <RadioGroup
        android:id="@+id/audio_presets"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
